--- a/django/project_django2/general_app/templates/general_app/home.html
+++ b/django/project_django2/general_app/templates/general_app/home.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Home</h1>
-</body>
-</html>
+{% extends 'general_app/base.html' %}
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    <h1>section</h1>
+{% endblock %}
