--- a/django/project_django2/product_app/templates/product_app/product.html
+++ b/django/project_django2/product_app/templates/product_app/product.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Product {{data}}</h1>
-</body>
-</html>
+{% extends 'general_app/base.html' %}
+
+{% block title %}Product{% endblock %}
+
+{% block content %}
+{% if product %}
+<h1>Products</h1>
+<h2>ID: {{ product.id }}</h2>
+<h2>Name: {{ product.name }}</h2>
+<h2>Description: {{ product.description }}</h2>
+<h2>Price: {{ product.price }}</h2>
+{% else %}
+<p>Product not found.</p>
+{% endif %}
+<a href="{% url 'products' %}">Back to Product List</a>
+{% endblock %}
