--- a/django/project_django2/product_app/templates/product_app/products.html
+++ b/django/project_django2/product_app/templates/product_app/products.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 <h1>Products list</h1>
-<ul>
+<div style="display: flex; flex-wrap: wrap;">
     {% for product in product_list %}
     <a href="{{ product.id }}">
-        <li>ID: {{ product.id }}, Name: {{ product.name }},Price ${{ product.price }}</li>
+        <img src="{{ product.image_url }}" alt="{{ product.name }}" style="width: 200px;height: 200px;object-fit: cover; margin: 16px; border: 1px solid black;">
+        <li> Name: {{ product.name }},Price ${{ product.price }}</li>
     </a>
     {% endfor %}
-</ul>
+</div style="display: flex;">
 <h2>End</h2>
 {% endblock %}
