--- a/product_app/templates/product/products.html
+++ b/product_app/templates/product/products.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Products</h1>
+    {% for product in products %}
+        <div style="width: 50px;height: 50px;object-fit: cover;">
+            <img style="width: 100%;height: 100%;" src="{{ product.image_url }}" alt="{{ product.name }}">
+        </div>
+        <h2>{{ product.name }}</h2>
+        <p>{{ product.description }}</p>
+        <p>{{ product.price }}</p>
+        <a href="/product/{{ product.id }}">View</a>
+        <a href="/product/{{ product.id }}/edit">Edit</a>
+        <a href="/product/{{ product.id }}/delete">Delete</a>
+    {% endfor %}
 </body>
+
 </html>
