--- a/general_app/templates/pages/index.html
+++ b/general_app/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
-    <h1>Welcome to the Home Page</h1>
-    <p>This is the home page of the General App</p>
+{% include 'components/section.html' %}
+{% include 'components/partner.html' %}
 {% endblock %}
