chore : adding load static folder

--- a/general_app/templates/account/sign_in.html
+++ b/general_app/templates/account/sign_in.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%}
 {% block title %}Sign In{% endblock %}
+{% load static %}
 {% block content %}
 <!--
   This example requires some changes to your config:
