--- a/product_app/templates/product/products.html
+++ b/product_app/templates/product/products.html
@@ -1,25 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block title %}Products{% endblock %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/aspect-ratio'),
+    ],
+  }
+  ```
+-->
+<div class="bg-white">
+    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+        <h2 class="text-2xl font-bold tracking-tight text-gray-900">Customers also purchased</h2>
 
-<body>
-    <h1>Products</h1>
-    {% for product in products %}
-        <div style="width: 50px;height: 50px;object-fit: cover;">
-            <img style="width: 100%;height: 100%;" src="{{ product.image_url }}" alt="{{ product.name }}">
+        <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+            {% for product in products %}
+            <div class="group relative">
+                <div
+                    class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                    <img src="{{ product.image_url }}" alt="{{ product.name }}"
+                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between">
+                    <div>
+                        <h3 class="text-sm text-gray-700">
+                            <a href="#">
+                                <span aria-hidden="true" class="absolute inset-0"></span>
+                                Basic Tee
+                            </a>
+                        </h3>
+                        <p class="mt-1 text-sm text-gray-500">{{ product.name}}</p>
+                    </div>
+                    <p class="text-sm font-medium text-gray-900">${{ product.price }}</p>
+                </div>
+            </div>
+            {% endfor %}
+            <!-- More products... -->
         </div>
-        <h2>{{ product.name }}</h2>
-        <p>{{ product.description }}</p>
-        <p>{{ product.price }}</p>
-        <a href="/product/{{ product.id }}">View</a>
-        <a href="/product/{{ product.id }}/edit">Edit</a>
-        <a href="/product/{{ product.id }}/delete">Delete</a>
-    {% endfor %}
-</body>
-
-</html>
+    </div>
+</div>
+{% endblock %}
+<!-- <div style="width: 50px;height: 50px;object-fit: cover;">
+    <img style="width: 100%;height: 100%;" src="{{ product.image_url }}" alt="{{ product.name }}">
+</div>
+<h2>{{ product.name }}</h2>
+<p>{{ product.price }}</p>
+<p>{{ product.description }}</p>
+<a href="/product/{{ product.id }}">View</a>
+<a href="/product/{{ product.id }}/edit">Edit</a>
+<a href="/product/{{ product.id }}/delete">Delete</a> -->
