--- a/general_app/templates/account/sign_in.html
+++ b/general_app/templates/account/sign_in.html
@@ -2,29 +2,14 @@
 {% block title %}Sign In{% endblock %}
 {% load static %}
 {% block content %}
-<!--
-  This example requires some changes to your config:
-  
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-    ],
-  }
-  ```
--->
-<!--
-  This example requires updating your template:
 
-  ```
-  <html class="h-full bg-white">
-  <body class="h-full">
-  ```
--->
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+
+<form method="post">
+  {% csrf_token %}
+  {{ sign_in.as_p }}
+  <button type="submit">Sign In</button>
+</form>
+<!-- <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
       <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
       <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
@@ -61,5 +46,5 @@
         <a href="#" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
       </p>
     </div>
-  </div>
+  </div> -->
 {% endblock %}
