--- a/general_app/templates/account/sign_up.html
+++ b/general_app/templates/account/sign_up.html
@@ -2,29 +2,13 @@
 {% block title %}Sign In{% endblock %}
 {% load static %}
 {% block content %}
-<!--
-  This example requires some changes to your config:
-  
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/forms'),
-    ],
-  }
-  ```
--->
-<!--
-  This example requires updating your template:
 
-  ```
-  <html class="h-full bg-white">
-  <body class="h-full">
-  ```
--->
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<form  method="POST">
+    {% csrf_token %}
+    {{ sign_up.as_p }}
+    <button type="submit">Sign Up</button>
+</form>
+<!-- <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
         <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
             alt="Your Company">
@@ -68,6 +52,6 @@
                 trial</a>
         </p>
     </div>
-</div>
+</div> -->
 
 {% endblock %}
