--- a/product_app/templates/product/products.html
+++ b/product_app/templates/product/products.html
@@ -2,20 +2,6 @@
 {% block title %}Products{% endblock %}
 {% block content %}
 
-<!--
-  This example requires some changes to your config:
-  
-  ```
-  // tailwind.config.js
-  module.exports = {
-    // ...
-    plugins: [
-      // ...
-      require('@tailwindcss/aspect-ratio'),
-    ],
-  }
-  ```
--->
 <div class="bg-white">
     <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
         <h2 class="text-2xl font-bold tracking-tight text-gray-900">Customers also purchased</h2>
@@ -31,7 +17,7 @@
                 <div class="mt-4 flex justify-between">
                     <div>
                         <h3 class="text-sm text-gray-700">
-                            <a href="#">
+                            <a href="{% url 'product' product.id %}">
                                 <span aria-hidden="true" class="absolute inset-0"></span>
                                 Basic Tee
                             </a>
