--- a/product_app/templates/product/product.html
+++ b/product_app/templates/product/product.html
@@ -8,4 +8,5 @@
 <h1>{{ product.name }}</h1>
 <p>{{ product.description }}</p>
 <p>Price: {{ product.price }}</p>
+<a href="{% url 'add_to_cart' id=product.id %}">add</a>
 {% endblock %}
