--- a/general_app/templates/pages/about.html
+++ b/general_app/templates/pages/about.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}About{% endblock %}
 {% block content %}
+<div style="display: flex;justify-content: center;align-items: center;flex-direction: column;min-height: 100vh;">
     <h1>Welcome to the About Page</h1>
     <p>This is the About page of the General App</p>
+</div>
 {% endblock %}
