--- a/product_app/templates/product/products.html
+++ b/product_app/templates/product/products.html
@@ -9,24 +9,23 @@
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             {% for product in products %}
             <div class="group relative">
-                <div
+                <div style="width: 300px;height: 300px;"
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="{{ product.image_url }}" alt="{{ product.name }}"
-                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <a href="{% url 'product' product.id %}">
+                        <img src="{{ product.image_url }}" alt="{{ product.name }}"
+                            class="h-full w-full object-cover">
+                    </a>
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
-                        <h3 class="text-sm text-gray-700">
-                            <a href="{% url 'product' product.id %}">
-                                <span aria-hidden="true" class="absolute inset-0"></span>
-                                Basic Tee
-                            </a>
-                        </h3>
                         <p class="mt-1 text-sm text-gray-500">{{ product.name}}</p>
+                        <p class="text-sm font-medium text-gray-900">${{ product.price }}</p>
                     </div>
                     <div>
-                        <p class="text-sm font-medium text-gray-900">${{ product.price }}</p>
-                        <a href="{% url 'add_to_cart' product.id %}">add</a>
+                        <button
+                            class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
+                            <a href="{% url 'add_to_cart' product.id %}">add</a>
+                        </button>
                     </div>
                 </div>
             </div>
