--- a/product_app/templates/cart/cart.html
+++ b/product_app/templates/cart/cart.html
@@ -49,10 +49,10 @@
             <div class="md:w-1/4"></div>
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h2 class="text-lg font-semibold mb-4">Summary</h2>
-                <div class="flex justify-between mb-2">
+                <!-- <div class="flex justify-between mb-2">
                     <span>Subtotal</span>
                     <span>$19.99</span>
-                </div>
+                </div> -->
                 <div class="flex justify-between mb-2">
                     <span>Taxes</span>
                     <span>$1.99</span>
@@ -64,7 +64,7 @@
                 <hr class="my-2">
                 <div class="flex justify-between mb-2">
                     <span class="font-semibold">Total</span>
-                    <span class="font-semibold">$21.98</span>
+                    <span class="font-semibold">${{ total_price }}</span>
                 </div>
                 <button style="background:#0195C3;"
                     class=" text-white py-2 px-4 rounded-lg mt-4 w-full">Checkout</button>
