--- a/product_app/templates/product/product.html
+++ b/product_app/templates/product/product.html
@@ -1,12 +1,41 @@
 {% extends 'base.html'%}
 {% block title %}Product{% endblock %}
 {% block content %}
+<!-- component -->
+<section style="margin:0 50px 0 50px;" class="text-gray-700 body-font overflow-hidden bg-white">
+    <div style="max-width: 1200px;" class="container px-5 py-24 mx-auto">
+        <div class="lg:w-4/5 mx-auto flex ">
+            <div style="width: 500px;height: 300px;">
+                <img style="width: 100%;height: 100%;" alt="{{product.name}}"
+                    class="lg:w-1/2  object-cover  rounded border border-gray-200"
+                    src="{{product.image_url}}">
+            </div>
+            <div style="margin-left: 16px;" class="lg:w-1/2 w-full lg:pl-10 lg:py-6  lg:mt-0">
+                <h2 class="text-sm title-font text-gray-500 tracking-widest">BRAND NAME</h2>
+                <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">{{product.name}}</h1>
 
-<div>
+                <p class="leading-relaxed">{{product.description}}Fam locavore kickstarter distillery. Mixtape chillwave
+                    tumeric sriracha
+                    taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn.
+                    Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra
+                    jean shorts keytar banjo tattooed umami cardigan.</p>
+
+                <div style="margin-top: 16px;" class="flex">
+                    <span class="title-font font-medium text-2xl text-gray-900">${{product.price}}</span>
+                    <button style="border-radius: 5px;margin-left:16px ;background: rgb(255, 75, 75);"
+                        class="flex ml-auto text-white border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
+                        <a href="{% url 'add_to_cart' id=product.id %}">add</a>
+                    </button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
+<!-- <div>
     <img src="{{ product.image_url }}" alt="{{ product.name }}">
 </div>
 <h1>{{ product.name }}</h1>
 <p>{{ product.description }}</p>
-<p>Price: {{ product.price }}</p>
-<a href="{% url 'add_to_cart' id=product.id %}">add</a>
-{% endblock %}
+<p>Price: {{ product.price }}</p> -->
