chore : forgot What I changge

--- a/product_app/templates/product/product.html
+++ b/product_app/templates/product/product.html
@@ -4,17 +4,17 @@
 <!-- component -->
 <section style="margin:0 50px 0 50px;" class="text-gray-700 body-font overflow-hidden bg-white">
     <div style="max-width: 1200px;" class="container px-5 py-24 mx-auto">
-        <div class="lg:w-4/5 mx-auto flex ">
-            <div style="width: 500px;height: 300px;">
-                <img style="width: 100%;height: 100%;" alt="{{product.name}}"
-                    class="lg:w-1/2  object-cover  rounded border border-gray-200"
+        <div class="flex">
+            <div class="image-container">
+                <img alt="{{product.name}}" class="object-cover w-full h-full rounded border border-gray-200"
                     src="{{product.image_url}}">
             </div>
             <div style="margin-left: 16px;" class="lg:w-1/2 w-full lg:pl-10 lg:py-6  lg:mt-0">
                 <h2 class="text-sm title-font text-gray-500 tracking-widest">BRAND NAME</h2>
                 <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">{{product.name}}</h1>
 
-                <p class="leading-relaxed">{{product.description}}Fam locavore kickstarter distillery. Mixtape chillwave
+                <p class="product-description">{{product.description}} Fam locavore kickstarter distillery. Mixtape
+                    chillwave
                     tumeric sriracha
                     taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn.
                     Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra
@@ -32,10 +32,36 @@
         </div>
     </div>
 </section>
+<style>
+    /* ขนาดปกติ */
+    .image-container {
+        width: 300px;
+        height: 300px;
+    }
+
+    .image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 8px;
+        border: 1px solid #d1d5db;
+    }
+
+    /* เมื่อหน้าจอเล็กกว่า 1030px */
+    @media (max-width: 1030px) {
+        .image-container {
+            width: 300px;
+            height: 200px;
+        }
+        .desc-container{
+            font-size: 1rem;
+        }
+    }
+    @media (max-width: 1000px) {
+    .product-description {
+        font-size: 14px; /* ปรับขนาดตัวอักษรลง */
+        line-height: 1.5; /* ปรับ line-height ให้เหมาะสม */
+    }
+}
+</style>
 {% endblock %}
-<!-- <div>
-    <img src="{{ product.image_url }}" alt="{{ product.name }}">
-</div>
-<h1>{{ product.name }}</h1>
-<p>{{ product.description }}</p>
-<p>Price: {{ product.price }}</p> -->
