--- a/product_app/templates/product/products.html
+++ b/product_app/templates/product/products.html
@@ -4,7 +4,10 @@
 
 <div class="bg-white">
     <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
+        
         <h2 class="text-2xl font-bold tracking-tight text-gray-900">Customers also purchased</h2>
+        
+        {% include 'components/search.html' %}
 
         <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             {% for product in products %}
@@ -12,35 +15,27 @@
                 <div style="width: 300px;height: 300px;"
                     class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                     <a href="{% url 'product' product.id %}">
-                        <img src="{{ product.image_url }}" alt="{{ product.name }}"
-                            class="h-full w-full object-cover">
+                        <img src="{{ product.image_url }}" alt="{{ product.name }}" class="h-full w-full object-cover">
                     </a>
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
-                        <p class="mt-1 text-sm text-gray-500">{{ product.name}}</p>
+                        <p class="mt-1 text-sm text-gray-500">{{ product.name }}</p>
                         <p class="text-sm font-medium text-gray-900">${{ product.price }}</p>
                     </div>
                     <div>
-                        <button style="border-radius: 5px;margin-left:16px ;background: rgb(255, 75, 75);"
-                        class="flex ml-auto text-white border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
-                        <a href="{% url 'add_to_cart' id=product.id %}">add</a>
-                    </button>
+                        <button style="border-radius: 5px; margin-left:16px; background: rgb(255, 75, 75);"
+                            class="flex ml-auto text-white border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
+                            <a href="{% url 'add_to_cart' id=product.id %}">add</a>
+                        </button>
                     </div>
                 </div>
             </div>
+            {% empty %}
+            <p>No products found.</p>
             {% endfor %}
-            <!-- More products... -->
         </div>
     </div>
 </div>
+
 {% endblock %}
-<!-- <div style="width: 50px;height: 50px;object-fit: cover;">
-    <img style="width: 100%;height: 100%;" src="{{ product.image_url }}" alt="{{ product.name }}">
-</div>
-<h2>{{ product.name }}</h2>
-<p>{{ product.price }}</p>
-<p>{{ product.description }}</p>
-<a href="/product/{{ product.id }}">View</a>
-<a href="/product/{{ product.id }}/edit">Edit</a>
-<a href="/product/{{ product.id }}/delete">Delete</a> -->
