--- a/product_app/templates/cart/cart.html
+++ b/product_app/templates/cart/cart.html
@@ -22,10 +22,10 @@
                                 <td class="py-4">
                                     <div class="flex items-center">
                                         <div style="width:40px;height: 40px;">
-                                            <img style="width: 100%;height: 100%;object-fit: cover;" class="mr-4" src="{{ item.product.image_url }}"
-                                                alt="{{ item.product.name }}">
+                                            <img style="width: 100%;height: 100%;object-fit: cover;" class="mr-4"
+                                                src="{{ item.product.image_url }}" alt="{{ item.product.name }}">
                                         </div>
-                                        <span style="margin: 16px;" class=" font-semibold">{{ item.product.name }}</span>
+                                        <span style="margin: 16px;" class=" font-semibold"><a href="{% url 'product' item.product.id %}">{{ item.product.name }}</a></span>
                                     </div>
                                 </td>
                                 <td class="py-4 text-center">${{ item.product.price }}</td>
@@ -46,29 +46,27 @@
                 </div>
             </div>
             <!-- Summary -->
-            <div class="md:w-1/4"></div>
-            <div class="bg-white rounded-lg shadow-md p-6">
-                <h2 class="text-lg font-semibold mb-4">Summary</h2>
-                <!-- <div class="flex justify-between mb-2">
-                    <span>Subtotal</span>
-                    <span>$19.99</span>
-                </div> -->
-                <div class="flex justify-between mb-2">
-                    <span>Taxes</span>
-                    <span>$1.99</span>
+            <div class="md:w-1/4">
+                <div class="bg-white rounded-lg shadow-md p-6">
+                    <h2 class="text-lg font-semibold mb-4">Summary</h2>
+                    <div class="flex justify-between mb-2">
+                        <span>Taxes</span>
+                        <span>$1.99</span>
+                    </div>
+                    <div class="flex justify-between mb-2">
+                        <span>Shipping</span>
+                        <span>$0.00</span>
+                    </div>
+                    <hr class="my-2">
+                    <div class="flex justify-between mb-2">
+                        <span class="font-semibold">Total</span>
+                        <span class="font-semibold">${{ total_price }}</span>
+                    </div>
+                    <button style="background:#0195C3;"
+                        class=" text-white py-2 px-4 rounded-lg mt-4 w-full">Checkout</button>
                 </div>
-                <div class="flex justify-between mb-2">
-                    <span>Shipping</span>
-                    <span>$0.00</span>
-                </div>
-                <hr class="my-2">
-                <div class="flex justify-between mb-2">
-                    <span class="font-semibold">Total</span>
-                    <span class="font-semibold">${{ total_price }}</span>
-                </div>
-                <button style="background:#0195C3;"
-                    class=" text-white py-2 px-4 rounded-lg mt-4 w-full">Checkout</button>
             </div>
+
 
         </div>
     </div>
