--- a/general_app/templates/components/partner.html
+++ b/general_app/templates/components/partner.html
@@ -1,6 +1,6 @@
 <div class="bg-white py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-        <h2 class="text-center text-lg font-semibold leading-8 text-gray-900">Trusted by the world’s most innovative
+        <h2 class="text-center text-lg font-semibold leading-8 text-gray-900">My partners innovation teams
             teams
         </h2>
         <div
