style : sign up & in

--- a/general_app/templates/account/profile.html
+++ b/general_app/templates/account/profile.html
@@ -4,5 +4,6 @@
 {% block content %}
 <div style="display: flex;justify-content: center;align-items: center;flex-direction: column;min-height: 100vh;">
     <h1>{{ user.username }}</h1>
+    <p>Email: {{ user.email }}</p>
 </div>
 {% endblock %}
