chore : nothing much delete comment only

--- a/general_app/templates/components/nav.html
+++ b/general_app/templates/components/nav.html
@@ -8,20 +8,12 @@
           aria-controls="mobile-menu" aria-expanded="false">
           <span class="absolute -inset-0.5"></span>
           <span class="sr-only">Open main menu</span>
-          <!--
-              Icon when menu is closed.
-  
-              Menu open: "hidden", Menu closed: "block"
-            -->
+           
           <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
-          <!--
-              Icon when menu is open.
-  
-              Menu open: "block", Menu closed: "hidden"
-            -->
+          
           <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
@@ -109,16 +101,14 @@
 </nav>
 
 <script>
-  // เลือกปุ่มและ dropdown
   const toggleButton = document.getElementById('user-menu-button');
   const dropdownMenu = document.getElementById('user-menu-dropdown');
 
-  // เพิ่มฟังก์ชัน toggle
   toggleButton.addEventListener('click', function () {
     if (dropdownMenu.style.display === 'none' || dropdownMenu.style.display === '') {
-      dropdownMenu.style.display = 'block'; // แสดง dropdown
+      dropdownMenu.style.display = 'block';  
     } else {
-      dropdownMenu.style.display = 'none'; // ซ่อน dropdown
+      dropdownMenu.style.display = 'none';  
     }
   });
 </script>
