--- a/product_app/templates/product/product.html
+++ b/product_app/templates/product/product.html
@@ -33,7 +33,6 @@
     </div>
 </section>
 <style>
-    /* ขนาดปกติ */
     .image-container {
         width: 300px;
         height: 300px;
@@ -47,7 +46,6 @@
         border: 1px solid #d1d5db;
     }
 
-    /* เมื่อหน้าจอเล็กกว่า 1030px */
     @media (max-width: 1030px) {
         .image-container {
             width: 300px;
@@ -59,8 +57,8 @@
     }
     @media (max-width: 1000px) {
     .product-description {
-        font-size: 14px; /* ปรับขนาดตัวอักษรลง */
-        line-height: 1.5; /* ปรับ line-height ให้เหมาะสม */
+        font-size: 14px; 
+        line-height: 1.5;  
     }
 }
 </style>
